syntax = "proto3";
package proto.artifact;

option go_package = "github.com/spinnaker/kleat/api/client/artifact";

import "google/protobuf/wrappers.proto";

// Configuration for the GitHub artifact provider.
message GitHub {
    // Whether the GitHub artifact provider is enabled.
    google.protobuf.BoolValue enabled = 1;

    // The list of configured GitHub accounts.
    repeated GitHubAccount accounts = 2;
}

// Configuration for a GitHub artifact account. Either `username` and
// `password`, `usernamePasswordFile`, `token`, or `tokenFile` should be
// specified as means of authentication.
message GitHubAccount {
    // The name of the account.
    string name = 1;

    // The GitHub account username.
    string username = 2;

    // The GitHub account password.
    string password = 3;

    // The path to a file containing the username and password of the account
    // in the format `${username}:${password}`.
    string usernamePasswordFile = 4;

    // The GitHub access token.
    string token = 5;

    // The path to a file containing the GitHub access token.
    string tokenFile = 6;
}
